@@ -1,3 +1,6 @@
+* Add URL entry
+* Remove request
+
 Version 2.8.0 - 2013-04-22
 * Bug fixes (see mercurial logs for details)
 * Manage dynamic label
